style.css
body {
  background-color: #c6c2e4;
  font-family: Helvetica, "Consolas", "Courier New", monospace;
}

.centerBox {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  background-color: #8995d8;
  border-radius: 30px;
  display: block;
  margin-left: 3%;
  margin-right: 3%;
  margin-top: 1%;
  margin-bottom: 1%;
}

li {
  list-style: none;
  text-align: left;
  text-transform: capitalize;
  margin-left: 20px;
  font-family: Helvetica;
}

.mainHeading {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  position: sticky;
  overflow: hidden;
  text-align: left;
  font-size: 50px;
  margin-left: 15px;
  padding-left: 5%;
  padding-top: 3%;
  color: rgb(88, 69, 182);
  font-weight: bold;
}

.mainHeading:hover {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  position: sticky;
  overflow: hidden;
  text-align: left;
  font-size: 52px;
  margin-left: 15px;
  padding-left: 5%;
  padding-top: 3%;
  color: rgb(98, 59, 183);
  font-weight: bold;
  transition: ease-in-out;
}

button {
  border: none;
}

button:hover {
  background-color: #e0b06b;
  cursor: pointer;
}

h3.dateAndTime {
  display: flex;
  font-family: "Consolas", "Courier New", monospace, Helvetica;
  align-items: center;
  flex-wrap: wrap;
  position: sticky;
  text-align: right;
  overflow: hidden;
  color: #ffffff;
  margin-top: 5%;
  padding-top: 3%;
  font-size: 24px;
  font-weight: bold;
}

h3.dateAndTime:hover {
  display: flex;
  font-family: "Consolas", "Courier New", monospace, Helvetica;
  align-items: center;
  flex-wrap: wrap;
  position: sticky;
  text-align: right;
  overflow: hidden;
  text-shadow: 1px 1px 1px #8a269e;
  margin-top: 3%;
  margin-right: 3%;
  padding-top: 2%;
  font-size: 26px;
  font-weight: bold;
}

#search-text-input {
  color: rgb(97, 10, 126);
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
  position: relative;
  outline: none;
  background-color: #e2fcfe;
  padding: 8px 8px 8px 8px;
  border-radius: 40px;
  border: rgb(61, 77, 163);
  max-width: 100%;
  margin-left: 8%;
}

#search-text-input:hover {
  color: rgb(97, 10, 126);
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
  position: relative;
  outline: none;
  background-color: #bdf6fc;
  padding: 8px 8px 8px 8px;
  border-radius: 40px;
  border: rgb(61, 77, 163);
  max-width: 100%;
  margin-left: 8%;
  cursor: pointer;
}

.currentButton {
  display: block;
  outline: none;
  background-color: #ffffff;
  color: rgb(88, 69, 182);
  text-align: center;
  position: static;
  padding: 5px 5px 5px 5px;
  border-radius: 20px;
  border: rgb(89, 106, 202);
  margin-left: 5px;
  max-width: 100%;
  font-size: 15px;
}

.currentButton:hover {
  display: block;
  outline: none;
  text-align: center;
  color: #fff;
  position: static;
  padding: 5px 5px 5px 5px;
  border-radius: 20px;
  background-color: #f4af48;
  border: 2px solid rgb(224, 126, 22);
  max-width: 100%;
  margin-left: 5px;
  cursor: pointer;
}

input.inputButton {
  display: block;
  outline: none;
  background-color: #ffffff;
  color: rgb(88, 69, 182);
  text-align: center;
  position: static;
  border-radius: 40px;
  margin-top: 5px;
  border: rgb(89, 106, 202);
  max-width: 100%;
  margin-left: 45%;
}

input.inputButton:hover {
  display: block;
  outline: none;
  text-align: center;
  position: static;
  border-radius: 40px;
  background-color: #fefa8d;
  border: 2px solid rgb(190, 224, 22);
  max-width: 100%;
  margin-top: 5px;
  margin-left: 45%;
  cursor: pointer;
}

.today {
  color: #fff;
  text-align: left;
  font-size: 26px;
  margin-left: 12%;
  font-weight: bold;
  margin-top: 15px;
}

button.CorF {
  text-align: center;
  background-color: #717fcd;
  padding: 5px 10px 5px 10px;
  border-radius: 25px;
  font-size: 15px;
  margin-right: 10px;
  color: rgb(88, 69, 182);
  display: block;
  outline: none;
  background-color: #ffffff;
  text-align: center;
  position: static;
  border: rgb(89, 106, 202);
  max-width: 100%;
}

button.CorF:hover {
  text-align: center;
  background-color: #90d214;
  color: #fff;
  border: 2px solid rgb(233, 255, 38);
  border-radius: 25px;
  font-size: 15px;
  margin-right: 10px;
  cursor: pointer;
  border: 2px solid rgb(217, 47, 255);
  padding: 5px 10px 5px 10px;
  display: block;
  outline: none;
  background-color: #ff6bf3;
  text-align: center;
  position: static;
  max-width: 100%;
}

.currentTemp {
  text-transform: capitalize;
  font-size: 28px;
  text-align: left;
  margin-bottom: 15px;
  padding-bottom: 20px;
  padding-left: 10px;
  color: white;
}

.otherTemp {
  text-transform: capitalize;
  font-size: 28px;
  text-align: left;
  margin-bottom: 15px;
  padding-bottom: 20px;
  padding-left: 10px;
  color: white;
}

.CorFLetter {
  font-size: 18px;
  text-align: left;
  color: white;
  font-size: 25px;
  padding-bottom: 20px;
}

.highLow {
  position: relative;
  color: white;
  font-size: 18px;
  padding-bottom: 10px;
}

.currentDescription {
  text-align: right;
  align-items: center;
  padding-bottom: 10px;
  font-size: 18px;
  color: #fff;
  max-width: 100%;
}

span.currentHumidity {
  text-align: right;
  align-items: center;
  font-size: 18px;
  padding-bottom: 10px;
  color: #fff;
  max-width: 100%;
}

span.currentWind {
  text-align: right;
  align-items: center;
  padding-bottom: 10px;
  font-size: 18px;
  color: #fff;
  max-width: 100%;
}

h3.current {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
  position: relative;
  color: white;
  background-color: #6a84ed;
  border-radius: 100px;
  border: 4px solid rgb(132, 114, 217);
  padding: 15px 10px 15px 10px;
  margin-left: 5px;
  margin-right: 5px;
  font-size: 20px;
}

h3.current:hover {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: center;
  color: white;
  position: relative;
  background-color: #717fcd;
  border-radius: 100px;
  border: 4px solid rgb(97, 90, 194);
  padding: 15px 10px 15px 10px;
  margin-left: 5px;
  margin-right: 5px;
  font-size: 20px;
}

.curWeatherIcon {
  border-radius: 250px;
  display: flex;
  align-items: center;
  text-align: center;
  line-height: 50px;
  flex-wrap: wrap;
  text-align: center;
  font-size: 38px;
}

img {
  text-align: center;
  align-items: center;
}

#icon {
  display: flex;
  align-items: center;
  font-size: 20px;
  text-align: center;
}

.weatherIcon {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  text-align: right;
  color: #bdf6fc;
  font-size: 20px;
  padding: 20px 20px 20px 20px;
  font-weight: bold;
}

.cityBox {
  align-items: center;
  text-align: center;
}

h4.city {
  display: flex;
  text-transform: capitalize;
  align-items: center;
  text-align: center;
  background-color: #6a84ed;
  border-radius: 50px;
  flex-wrap: wrap;
  position: static;
  overflow: hidden;
  font-size: 26px;
  color: #ffffff;
  padding: 18px 18px 18px 18px;
  margin-right: 8%;
  border-radius: 75px;
  border: 4px solid rgb(113, 129, 221);
}

h4.city:hover {
  display: flex;
  text-transform: capitalize;
  text-align: center;
  align-items: center;
  background-color: #6a84ed;
  border-radius: 50px;
  flex-wrap: wrap;
  position: static;
  overflow: hidden;
  font-size: 26px;
  color: #ffffff;
  padding: 18px 18px 18px 18px;
  margin-right: 5%;
  background-color: #717fcd;
  border-radius: 60px;
  border: 4px solid rgb(97, 90, 194);
}

.weather-temperature .active:hover {
  text-decoration: none;
}

#forecast {
  margin-left: 2%;
  margin-right: 2%;
}

.weatherRow {
  background-color: rgb(121, 94, 211);
  border-radius: 50px;
  align-items: center;
  text-align: center;
  margin-left: 1%;
  margin-right: 1%;
}

.weather-forecast {
  margin-top: 22px;
  text-align: center;
  align-items: center;
  color: rgb(37, 6, 59);
  background-color: rgb(191, 193, 243);
  border-radius: 180px;
  border: 2px solid rgb(97, 90, 194);
}

.weather-forecast-day {
  font-size: 20px;
  opacity: 0.7;
}

.weather-forecast-temp-max {
  opacity: 0.9;
}

.weather-forecast-temp-min {
  opacity: 0.6;
}

.weather-forecast-temperatures {
  font-size: 18px;
}

.otherDaysFor {
  margin-top: 22px;
  text-align: center;
  align-items: center;
  color: rgb(37, 6, 59);
  background-color: rgb(212, 207, 234);
  border-radius: 180px;
  border: 2px solid rgb(97, 90, 194);
}

.otherDays {
  text-align: center;
  color: white;
  background-color: #7083d8;
  position: relative;
  border-radius: 100px;
  border: 3px solid rgb(113, 113, 221);
  padding: 5px 5px 5px 5px;
  margin-top: 1%;
  margin-bottom: 1%;
  font-size: 16px;
}

.weatherHeading {
  text-align: right;
  margin-right: 10%;
}

.otherDays:hover {
  text-align: center;
  color: white;
  background-color: #717fcd;
  position: relative;
  border-radius: 100px;
  border: 3px solid rgb(83, 83, 187);
  padding: 5px 5px 5px 5px;
  margin-top: 1%;
  margin-bottom: 1%;
  font-size: 16px;
}

.dayOfWeek {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  color: rgb(87, 103, 196);
  text-align: right;
  font-size: 18px;
  margin-top: 10px;
  margin-bottom: 10px;
  font-weight: bold;
}

.foot {
  display: block;
  color: white;
  text-align: center;
  align-items: center;
  margin-left: 8%;
  margin-bottom: 50%;
  margin-right: 8%;
  padding: 30px 20px 20px 20px;
  max-height: 100%;
}

